<resources>
    <string name="app_name">NH Care</string>
    <string name="title_layanan">Layanan</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_Profile">Profile</string>
    <string name="layanan">
        Layanan Hubungi :
        \n0812-1732-9234
    </string>
    <string name="daftar">Belum punya akun ?</string>
    <string name="login">Silahkan masukkan email dan kata sandi untuk masuk ke dalam aplikasi</string>
    <string name="register">Silahkan masukkan nama pengguna, email dan kata sandi untuk membuat akun baru</string>
    <string name="santunan">Santunan Anak Yatim dan Piatu</string>
    <string name="bangun">Pembangunan Fasilitas Nurul Husna</string>
    <string name="program">Program Unggulan</string>
    <string name="anak">Nama Lengkap Anak</string>
    <string name="jawaban"> adalah...</string>

</resources>