<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_layanan"
        android:name="com.example.nh_care.ui.layanan.LayananFragment"
        android:label="@string/title_layanan"
        tools:layout="@layout/fragment_layanan" />

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.example.nh_care.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.nh_care.ui.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>