<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:background="@drawable/bg_login">

                <ImageView
                    android:id="@+id/kembali"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/baseline_arrow_back_ios_new_24"
                    app:layout_constraintHorizontal_bias="0.119"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/masuk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="MASUK"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="@id/kembali"
                    app:layout_constraintTop_toBottomOf="@id/kembali" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="595dp">

                <TextView
                    android:id="@+id/selamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="Selamat Datang"
                    android:textColor="@color/green"
                    android:textSize="26sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/deskripsi_selamat_datang"
                    android:layout_width="320dp"
                    android:layout_height="39dp"
                    android:text="@string/login"
                    android:textColor="@color/grey2"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_marginTop="-6dp"
                    app:layout_constraintTop_toBottomOf="@id/selamat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    style="@style/TextInputLayout"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:startIconDrawable="@drawable/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/deskripsi_selamat_datang">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_mediumitalic"
                        android:hint="Masukkan Email" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_kata_sandi"
                    style="@style/TextInputLayout"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/password"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    android:layout_marginTop="20dp"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintStart_toStartOf="@id/til_email"
                    app:layout_constraintTop_toBottomOf="@+id/til_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_kata_sandi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Masukkan Kata Sandi"
                        android:fontFamily="@font/poppins_mediumitalic"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/lupa_katasandi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_mediumitalic"
                    android:text="Lupa kata sandi ?"
                    android:textColor="@color/green"
                    app:layout_constraintEnd_toEndOf="@id/til_kata_sandi"
                    app:layout_constraintTop_toBottomOf="@+id/til_kata_sandi" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/tombol_masuk"
                    style="@style/tombol"
                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="MASUK"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.516"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lupa_katasandi" />

                <TextView
                    android:id="@+id/belum_punya_akun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="104dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_lightitalic"
                    android:text="@string/daftar"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tombol_masuk" />

                <TextView
                    android:id="@+id/daftarakun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_mediumitalic"
                    android:text="Daftar"
                    android:textColor="@color/green"
                    app:layout_constraintStart_toEndOf="@+id/belum_punya_akun"
                    app:layout_constraintTop_toBottomOf="@+id/tombol_masuk" />

                <TextView
                    android:id="@+id/layanan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_lightitalic"
                    android:gravity="center_horizontal"
                    android:text="@string/layanan"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>